# cpp-task

./: CMakeLists.txt  README.md
src/: depth.cpp  depth.hpp
tests/: depth_test.cpp
